# pyqtdeploy-demo

./: .envrc  .gitignore  OpenSSL.py  Pipfile  Qt.py  README  README.orig  cpythononly.py  main.py  pyqt-demo.pdt  pyqt-demo.py  pyqtdeploy-demo.pdt  pyqtdeploy-demo.py  sysroot.toml
.github/: build.yml
.github/workflows/: build.yml
cpythononly/: __init__.py  _cpythononly.cpp  _cpythononly.h  _cpythononly.sip  pyproject.toml
cpythonplusqt/: _cpythonplusqt.cpp  _cpythonplusqt.h  pyproject.toml
cpythonplusqt/sip/_cpythonplusqt/: _cpythonplusqtmod.sip
demo/: __init__.py  app.py  demo.py  util.py
sysroot/: cpythononly.py  cpythonplusqt.py  python.py  sysroot.toml
