[build-system]
requires = [ "sip >=5, <6" ]
build-backend = "sipbuild.api"

[tool.sip]
abi-version = "12.8"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "_cpythononly"

[tool.sip.project]
verbose = true

[tool.sip.bindings._cpythononly]
sources = [ "_cpythononly.cpp"]
# headers = [ "_cpythononly.h"]
include-dirs = ["."]
